# WaxDemon

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  mise.toml  renovate.json
.cargo/: config.toml
.github/workflows/: helm-lint.yml  publish.yml  rust.yml
charts/waxdemon/: Chart.yaml  values.yaml
charts/waxdemon/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/waxdemon/templates/tests/: test-connection.yaml
crates/core/: Cargo.toml
crates/core/src/: currency.rs  distribution.rs  lib.rs  stats.rs  sync_status.rs  time_range.rs  types.rs
crates/core/tests/: currency.rs  distribution.rs  stats_builder.rs  sync_status.rs  time_range.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_init.sql
crates/db/src/: error.rs  items.rs  lib.rs  pool.rs  settings.rs  stats_history.rs
crates/db/tests/: integration.rs
crates/discogs/: Cargo.toml
crates/discogs/src/: client.rs  error.rs  lib.rs  types.rs
crates/discogs/tests/: client.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/scheduler/tests/: schedule.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/assets/: app.js  site.webmanifest  styles.css
crates/server/src/routes/: assets.rs  dashboard_stats.rs  image_proxy.rs  mod.rs  sync.rs  sync_status.rs
crates/server/src/views/: dashboard.rs  mod.rs
crates/server/tests/: dashboard_page.rs  dashboard_stats.rs  image_proxy.rs  sync_status.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  run.rs
crates/sync/tests/: integration.rs  unit.rs
